--- a/app/assets/stylesheets/seats.scss
+++ b/app/assets/stylesheets/seats.scss
@@ -1,8 +1,9 @@
-// Place all the styles related to the movies controller here.
+// Place all the styles related to the seats controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 
-#movie_date {
-  width: 50%;
+.row-no{
+	margin-right: 35px;
+	margin-left: 10px;
 }
