--- a/app/assets/stylesheets/screens.scss
+++ b/app/assets/stylesheets/screens.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the screens controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+
+
+
+.theater-name{
+	border-radius: 200px;
+  margin-right: 3px;
+  padding: 7px 16px 6px;
+  color: white;
+  background-color: black;
+  text-align: center;
+}
+
+
