--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <div align="right">
+      <%= link_to "New Booking", movies_path %>
+      <%= link_to "My Reservation", reservations_path %>
+      <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+    </div>
     <%= yield %>
   </body>
 </html>
