--- a/app/views/screens/index.html.erb
+++ b/app/views/screens/index.html.erb
@@ -1,23 +1,54 @@
 <h1>Screens</h1>
 
-<p>Book Movie ticket for <%= @movie.title %></p>>
+<p>Book Movie ticket for <%= @movie.title %></p>
 
 <p>
 <%= form_tag(screens_path(@movie), {:method => :get}) do %>
-  <%= date_field_tag :date, :onchange => "this.form.submit();" %>
+  <%= date_field_tag :movie_date, Date.today, :onchange => "this.form.submit();", id: :movie_date %>
 <% end %>
-</p>>
+</p>
 
 <table>
   <tbody>
     <% @screens.each do |theater_name, screens| %>
       <tr>
-        <td><%= theater_name %></td>
-      <% @screens.each do |screen| %>
-        <td><%= screen.start_time.strftime("%H:%M %p") %></td>
+        <td class="theater-name"><%= theater_name %></td>
+      <% screens.each do |screen| %>
+        <td><%= link_to screen.start_time.strftime("%H:%M %p"), "#", class: "button", id: "screen_#{screen.id}", data: {toggle: "modal"}, :onclick => "showSeatCount(#{screen.id});" %></td>
       <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 <br>
+
+
+<!-- Modal -->
+<div class="modal fade" id="screenmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Ticket Count</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <%= form_tag(seats_path(@screen), {:method => :get}) do %>
+      <div class="modal-body">
+          <%= hidden_field_tag :screen_id, ""%>
+          No of ticket : <%= select_tag :ticket_count,  options_for_select((1..10))%>
+      </div>
+      <div class="modal-footer">
+        <%= submit_tag "Proceed", class: "btn btn-primary" %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript">
+  function showSeatCount(screen_id) {
+    $('#screenmodal').modal('show'); 
+    $("#screen_id").val(screen_id);
+  }
+</script>
